--- a/src/Enumeration/Enumeration.csproj
+++ b/src/Enumeration/Enumeration.csproj
@@ -8,17 +8,58 @@
 		<LangVersion>latest</LangVersion>
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<Deterministic>true</Deterministic>
+		<IncludeBuildOutput>false</IncludeBuildOutput>
+		<SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+		<DevelopmentDependency>true</DevelopmentDependency>
+	</PropertyGroup>
+
+
+	<!-- references -->
+	<ItemGroup>
+		<PackageReference Include="System.CodeDom" Version="6.0.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.1.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="SourceGeneratorSupplement" Version="0.1.0"  PrivateAssets="all" GeneratePathProperty="true" />
+		<PackageReference Include="SourceGeneratorSupplement.TypeSourceGenerator" Version="0.0.2" GeneratePathProperty="true" >
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup>
+		<GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+	</PropertyGroup>
+
+	<Target Name="GetDependencyTargetPaths">
+		<ItemGroup>
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgSourceGeneratorSupplement)\lib\netstandard2.0\*.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgSourceGeneratorSupplement_TypeSourceGenerator)\lib\netstandard2.0\*.dll" IncludeRuntimeDependency="false" />
+		</ItemGroup>
+	</Target>
+
+
+	<!-- nuget -->
+	<PropertyGroup>
+		<Authors>maemon4095</Authors>
+		<Version>0.1.0-nightly</Version>
+		<Description>Generator of enumerated types, also known as discriminated union.</Description>
+		<Copyright>© maemon4095 2022</Copyright>
+		<PackageTags>sourcegenerator</PackageTags>
+		<PackageProjectUrl>https://github.com/maemon4095/Enumeration</PackageProjectUrl>
+		<RepositoryUrl>$(PackageProjectUrl)</RepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.1.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
-		<PackageReference Include="SourceGeneratorSupplement" Version="0.1.0" />
-		<PackageReference Include="SourceGeneratorSupplement.TypeSourceGenerator" Version="0.0.2">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="System.CodeDom" Version="6.0.0" />
-	</ItemGroup>
+		<!-- create nuget package as analyzer -->
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 
+		<!-- package dependency -->
+		<None Include="$(PkgSourceGeneratorSupplement)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+		<None Include="$(PkgSourceGeneratorSupplement_TypeSourceGenerator)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+	</ItemGroup>
+	
 </Project>
